Fixed Mobile layout (col-xs-6 would increase in height and skew grid layout if too much text was added) Removed opacity change on hover; reduced inset glow reworded sub-titles

--- a/index.css
+++ b/index.css
@@ -12,9 +12,9 @@ html, body, .container-fluid {
 }
 
 .row:hover { 
-    -webkit-box-shadow: inset 0rem 0rem 025rem 0rem rgba(255,255,255,1);
-    -moz-box-shadow: inset 0rem 0rem 0.25rem 0rem rgba(255,255,255,1);
-    box-shadow: inset 0rem 0rem 0.25rem 0rem rgba(255,255,255,1);
+    -webkit-box-shadow: inset 0rem 0rem 0.10rem 0rem rgba(255,255,255,1);
+    -moz-box-shadow: inset 0rem 0rem 0.10rem 0rem rgba(255,255,255,1);
+    box-shadow: inset 0rem 0rem 0.10rem 0rem rgba(255,255,255,1);
 }
 
 .row img {
